policies/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: enforce
  rules:
    - name: no-latest
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Không được dùng image tag :latest."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
